<!--
  ~ Instincts 2k17
  ~ Copyright (C) 2017  Adithya J
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<resources>
    <string name="app_name">Instincts</string>
    <string name="title_activity_maps">Map</string>

    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="college">College</string>
    <string name="department">Department</string>
    <string name="year">Year</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">REGISTER</string>

    <string name="general_guidelines"> \u2022 Please carry your college ID card with you.
\n\n \u2022 Cars and bikes will not be allowed to enter campus. So you will be asked to park them at the gate and walk inside.
\n\n \u2022 Registrations start at 10.30AM on Day 1 and 9AM on Day 2 and Day 3. Please be there on time. Kindly take a note of the events under general registration and those under special event registration.
\n\n \u2022 Please respect the college rules and regulations and abide by them.
\n\n \u2022 Smoking is strictly prohibited inside the campus premises. Possession and consumption of alcohol and narcotics and other illegal activities in any form is strictly prohibited. Any violation of the mentioned rules will be reported to your college and the case will be severely dealt with.
\n\n \u2022 If any damage to the college properties is reported, the cost of the damage will be collected. The Organisation will not take responsibility for any form of damage to person or property during the course of Instincts 2017.
\n\n \u2022 In case of any discrepancy, the decision of Instincts team is final.
\n\n \u2022 The college bus can be availed for travel to Instincts 2017.
\n\n \u2022 The college bus routes and MTC bus routes can be found in the website.
\n\n \u2022 For any other queries, please feel free to contact us anytime.</string>

    <string name="accommodation_guidelines">\u2022 Accommodation will be provided on a sharing basis. However, large teams or teams from the same college may be put up in the same rooms.
\n\n \u2022 Accommodation is provided on first cum first served basis.
\n\n \u2022 Participant will be charged on 24-hour basis, that is you will be charged from the day of check-in till the day you check out.
\n\n \u2022 Advance booking for accommodation is not available.
\n\n \u2022 ID cards are compulsory.
\n\n \u2022 The accommodation cost is Rs 100 per person.
\n\n \u2022 All members of a team should register for accommodation individually.
\n\n \u2022 Accommodation will be provided on 9th to 11th only.
\n\n \u2022 Girls have to follow the curfew system that prevails in the college strictly (8 pm).
\n\n \u2022 Please make entries in the register kept with the security whenever you move in and out of the allotted room.
\n\n \u2022 It is not advisable to keep valuable items along with the luggage in the room.
\n\n \u2022 Instincts 2017 will not be responsible for any loss or damage of your property.</string>

    <string name="mtc_routes">\u2022 CMBT TO KELAMBAKKAM (KLM): 570, 570X (SSNCE, Not very Frequent) Note: Do not board 570S. The destination of 570S is Siruseri/Sipcot and not Kelambakkam.
\n\n \u2022 T NAGAR TO KLM via Saidapet :19B (AC and Non AC), 519(SSNCE), 219A
\n\n \u2022 CENTRAL TO SSNCE: 221H (Not very frequent)
\n\n \u2022 CENTRAL R.S to BROADWAY: 10A,10E,11,11G,120K,15A,15B,15G,15L,17,17A,17B,17C,17D,17E,17G,17K,18A,18E,18F,18K,20A,20N,26,50,52B,52G,52L,53P,54V,5C,60D,60H,64C,71C,71D7F,88M,9M,G17,M51,M88,11,120,15B,15G.
\n\n \u2022 BROADWAY TO KLM: 102(AC and Non AC), 521H (Stops at SSN College of Engineering)
\n\n \u2022 TAMBARAM to SSNCE: 515, 555.
\n\n \u2022 SRP TOOLS TO KELAMBAKKAM: 19P, M19A, 102, 19B, 519(SSNCE), 521H (SSNCE), 568(SSNCE), 221H (SSNCE), 570.
\n\n \u2022 KEELKATALAI to SSNCE via Kovilambakkam, Medavakkam, South Pallikaranai, Sozhinganallur : 552K
\n\n \u2022 AMBATTUR TO KLM via Ampa Skywalk, Loyola, T nagar, Saidapet, Madhyakailash : 219A (Not Very Frequent)
\n\n \u2022 KELAMBAKKAM TO SSN 221H, 515, 521H,522,522K,566,568,568C,587, Share auto towards Thiruporur.
\n\n \u2022 Please Note that buses will not be available after 11 pm</string>

    <string name="about_instincts">Instincts, since its inception in 2006, has today become one of the largest campus festivals in South India, attracting crowds of well over 10,000, from over 150 institutions of higher learning.
\n\nA number of celebrities, performers and eminent personalities from the literary,cine, musical, sporting and educational streams visit our campus across these three days.
\n\nWe have played host in the past to names of the calibre of Madhavan, Arya, Jeyam Ravi, Anirudh Ravichander, Prabhu Deva, Gautam Vasudev Menon, Sivamani, Shaktishree Gopalan, Keith Peters, Santhanam, RJ Balaji , Srikanth and many more.
\n\nOur participants charm the country with the largest battle of intellect, culture and skill, providing a treat to anyone who is witness. Instincts is a combination of fun, learning and exposure all combined into one huge package. It is the ultimate battleground to unleash talent,showcase skills and soak in unlimited fun. At the end of it, anyone and everyone involved gains something massive from this cultural extravaganza - participant and organizer alike. Artistically and technically, INSTINCTS is a college cultural fest that stands unparalleled to this date.
\n\nWe welcome you to join us this year on the 9th, 10th and 11th of March for the 12th version of INSTINCTS!
\n\nSo get ready to hop onto the wildest and most adventurous roller coaster rides till date.
\n\nGet Ready for SSN Instincts 2K17.</string>

    <string name="about_ssn">SSN Institutions had its humble origins in 1996, when it was established by Dr.Shiv Nadar, eminent industrialist, philanthropist, and educationist.
\n\nThe small seed that was sown then has today grown into the foremost private engineering college in Tamil Nadu rolling out nothing less than the finest brains in the country.
\n\nSSN prides itself a little in being among the top ten most serene and beautiful campuses in the country, prides itself a little more in having the best infrastructure in the country and prides itself the most in providing an amalgamation of stimulating environments for intellectual development, free thinking and personal growth, challenging its students with dynamic learning opportunities and equipping them with the skills, insights, attitudes and practical experiences that are necessary to carry forward the various roles of society.
\n\nSo when it comes to learning , SSN doesn&#8217;t stop at the educational front,it acts as a catalyst that ignites students to reach the point of zenith in the cultural sphere as well.
\n\nThe future is set in motion when there is a confluence of youth; SSN takes pride in being responsible for the revolution that follows!</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_sign_in_response">Unknown response from Auth sign-in</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="sign_out_failed">Sign out failed</string>
</resources>
