<?xml version="1.0" encoding="utf-8"?><!--
  ~ Instincts 2k17
  ~ Copyright (C) 2017  Adithya J
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pimp.instincts.activities.ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Profile"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/qr_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="#f0f7f4"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit_2"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:textColor="#f0f7f4"
            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="#f0f7f4"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/college_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit_2"
            android:hint="@string/college"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:textColor="#f0f7f4"
            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textColorHint="#f0f7f4"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/department_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/department"
                android:inputType="textPersonName"
                android:paddingBottom="2dp"
                android:textColor="#f0f7f4"
                android:textCursorDrawable="@drawable/bg_input_cursor_2" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textColorHint="#f0f7f4"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/year_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/year"
                android:inputType="number"
                android:paddingBottom="2dp"
                android:textColor="#f0f7f4"
                android:textCursorDrawable="@drawable/bg_input_cursor_2" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="#f0f7f4"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/mobile_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit_2"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:paddingBottom="2dp"
            android:textColor="#f0f7f4"
            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:onClick="updateOnClick"
        android:src="@drawable/ic_save"
        android:text="UPDATE" />
</LinearLayout>
