<?xml version="1.0" encoding="utf-8"?><!--
  ~ Instincts
  ~ Copyright (C) 2017  Adithya J
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_without_clouds">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/spin_wheel_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="@color/spin_wheel_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="2dp"
                        android:textColor="@color/spin_wheel_blue"
                        android:textCursorDrawable="@drawable/bg_input_cursor" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="@color/spin_wheel_blue"
                        android:textCursorDrawable="@drawable/bg_input_cursor" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/go_btn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/go"
                    android:textColor="#d3d3d3" />
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/forgot_your_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cardview"
        android:layout_alignTop="@id/cardview"
        android:layout_marginEnd="-20dp"
        android:layout_marginRight="-20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        app:fabSize="normal" />

    <ImageView
        android:id="@+id/cloud1"
        android:src="@drawable/clouds_01"
        app:layout_heightPercent="2%"
        app:layout_marginTopPercent="4%"
        app:layout_widthPercent="18%" />

    <ImageView
        android:id="@+id/cloud2"
        android:src="@drawable/clouds_02"
        app:layout_heightPercent="3%"
        app:layout_marginTopPercent="21%"
        app:layout_widthPercent="18%" />

    <ImageView
        android:id="@+id/cloud3"
        android:src="@drawable/clouds_03"
        app:layout_heightPercent="1%"
        app:layout_marginTopPercent="20%"
        app:layout_widthPercent="17%" />

    <ImageView
        android:id="@+id/cloud4"
        android:src="@drawable/clouds_01"
        app:layout_heightPercent="2%"
        app:layout_marginTopPercent="32%"
        app:layout_widthPercent="18%" />

    <ImageView
        android:id="@+id/cloud5"
        android:src="@drawable/clouds_01"
        app:layout_heightPercent="2%"
        app:layout_marginTopPercent="26%"
        app:layout_widthPercent="18%" />

    <ImageView
        android:id="@+id/cloud6"
        android:src="@drawable/clouds_01"
        app:layout_heightPercent="2%"
        app:layout_marginTopPercent="10%"
        app:layout_widthPercent="18%" />
</android.support.percent.PercentRelativeLayout>
